tests/NormalTests/paczka1/fuzzy1/42796017.err
Error in line 1: ls9bi6mqMu A126 68,1
Error in line 3: S618 S447 93,1
Error in line 10: U2nf S296 59,3
